# HODL

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
src/: configs.py  main.py  models.py
src/admin/: admin.py  auth_backend.py  main.py  service.py
src/bot/: main.py
src/bot/excanges/: base.py  binance.py
src/excanges/: binance.py
