[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "w0rng", email = "me@w0rng.ru"},
]
dependencies = [
    "apscheduler>=3.10.1",
    "sqlalchemy>=2.0.4",
    "binance-connector>=2.0.0",
    "fastapi>=0.92.0",
    "uvicorn>=0.20.0",
    "sqladmin>=0.9.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
