[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "w0rng", email = "me@w0rng.ru"},
]
dependencies = [
    "apscheduler>=3.10.1",
    "sqlalchemy>=2.0.4",
    "binance-connector>=2.0.0",
    "fastapi>=0.92.0",
    "uvicorn>=0.20.0",
    "sqladmin>=0.9.0",
    "dramatiq>=1.14.1",
    "redis>=4.5.1",
    "django>=4.1.7",
    "sentry-sdk>=1.18.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
